--- a/containers/rocky/Containerfile
+++ b/containers/rocky/Containerfile
@@ -12,5 +12,6 @@ RUN mkdir ~/.ssh/
 RUN echo 'ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIEoUJV9wqCSvFOAj+x8I8p3hv3Wtf4qFwO7+iAg/XR0P andrew@nixos' > ~/.ssh/authorized_keys
 
 USER root
+RUN echo 'andrew:andrew' | chpasswd
 RUN ssh-keygen -A
 CMD /usr/sbin/sshd -D -p 8000
